Did sections templates and colored them different

--- a/index.html
+++ b/index.html
@@ -14,8 +14,16 @@
         />
     </head>
     <body>
-        <header class="header"></header>
-        <main class="main"></main>
+        <header class="header">
+            <div class="name"></div>
+            <div class="burger-menu"></div>
+        </header>
+        <main class="main">
+            <section class="profile"></section>
+            <section class="doings"></section>
+            <section class="whoings"></section>
+            <section class="works"></section>
+        </main>
         <footer class="footer"></footer>
         <script src="js/script.js"></script>
     </body>
