--- a/index.html
+++ b/index.html
@@ -19,10 +19,61 @@
             <div class="burger-menu"></div>
         </header>
         <main class="main">
-            <section class="profile"></section>
-            <section class="doings"></section>
-            <section class="whoings"></section>
-            <section class="works"></section>
+            <section class="profile">
+                <div class="profile__divider-top divider-top">
+                    <svg
+                        data-name="Layer 1"
+                        xmlns="http://www.w3.org/2000/svg"
+                        viewBox="0 0 1200 120"
+                        preserveAspectRatio="none"
+                    >
+                        <path
+                            d="M1200 120L0 16.48 0 0 1200 0 1200 120z"
+                            class="shape-fill"
+                        ></path>
+                    </svg>
+                </div>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                Placeat, debitis.
+                <div class="profile__divider-bottom divider-bottom">
+                    <svg
+                        data-name="Layer 1"
+                        xmlns="http://www.w3.org/2000/svg"
+                        viewBox="0 0 1200 120"
+                        preserveAspectRatio="none"
+                    >
+                        <path
+                            d="M321.39,56.44c58-10.79,114.16-30.13,172-41.86,82.39-16.72,168.19-17.73,250.45-.39C823.78,31,906.67,72,985.66,92.83c70.05,18.48,146.53,26.09,214.34,3V0H0V27.35A600.21,600.21,0,0,0,321.39,56.44Z"
+                            class="shape-fill"
+                        ></path>
+                    </svg>
+                </div>
+            </section>
+            <section class="doings">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                Placeat, debitis.
+                <div class="doings__divider-bottom divider-bottom">
+                    <svg
+                        data-name="Layer 1"
+                        xmlns="http://www.w3.org/2000/svg"
+                        viewBox="0 0 1200 120"
+                        preserveAspectRatio="none"
+                    >
+                        <path
+                            d="M741,116.23C291,117.43,0,27.57,0,6V120H1200V6C1200,27.93,1186.4,119.83,741,116.23Z"
+                            class="shape-fill"
+                        ></path>
+                    </svg>
+                </div>
+            </section>
+            <section class="whoings">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                Placeat, debitis.
+            </section>
+            <section class="works">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                Placeat, debitis.
+            </section>
         </main>
         <footer class="footer"></footer>
         <script src="js/script.js"></script>
