Created a lil' animation

--- a/index.html
+++ b/index.html
@@ -12,10 +12,14 @@
             href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap"
             rel="stylesheet"
         />
+        <link
+            href="https://fonts.googleapis.com/css2?family=Cutive+Mono&family=Open+Sans&display=swap"
+            rel="stylesheet"
+        />
     </head>
     <body>
         <header class="header">
-            <div class="name"></div>
+            <div class="name-typing">Aleshin Stanislav</div>
             <div class="burger-menu"></div>
         </header>
         <main class="main">
