Completely redone the animation using scss

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     </head>
     <body>
         <header class="header">
-            <div class="name-typing">Aleshin Stanislav</div>
+            <div class="name-typing"></div>
             <div class="burger-menu"></div>
         </header>
         <main class="main">
