Added placeholder for profile photo & some responsiveness

--- a/index.html
+++ b/index.html
@@ -56,8 +56,13 @@
                         ></path>
                     </svg>
                 </div>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                Placeat, debitis.
+                <div class="profile__photo photo">
+                    <img src="img/milos.png" alt="Placeholder" />
+                </div>
+                <div class="profile__text">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                    Placeat, debitis.
+                </div>
                 <div class="profile__divider-bottom divider-bottom">
                     <svg
                         data-name="Layer 1"
