Started working on profile's text

--- a/index.html
+++ b/index.html
@@ -56,9 +56,10 @@
                         ></path>
                     </svg>
                 </div>
-                <div class="profile__text">
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                    Placeat, debitis.
+                <div class="profile__text text">
+                    <p class="text__hello">Hello, I am</p>
+                    <p class="text__motto">Bringing sites to life</p>
+                    <p class="text__name">Stanislav Alyoshin</p>
                 </div>
                 <div class="profile__photo photo">
                     <img src="img/milos.png" alt="Placeholder" />
