--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@
                     <p class="text__name">Stanislav Alyoshin</p>
                 </div>
                 <div class="profile__photo photo">
+                    <p class="photo__placeholder">Placeholder</p>
                     <img src="img/milos.png" alt="Placeholder" />
                 </div>
                 <div class="profile__divider-bottom divider-bottom">
