Done with profile section

--- a/index.html
+++ b/index.html
@@ -14,6 +14,14 @@
             href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap"
             rel="stylesheet"
         />
+        <link
+            href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@800&display=swap"
+            rel="stylesheet"
+        />
+        <link
+            href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@1,300&display=swap"
+            rel="stylesheet"
+        />
         <!-- And this monospace one for the typing animation -->
         <link
             href="https://fonts.googleapis.com/css2?family=Cutive+Mono&family=Open+Sans&display=swap"
@@ -58,8 +66,12 @@
                 </div>
                 <div class="profile__text text">
                     <p class="text__hello">Hello, I am</p>
-                    <p class="text__motto">Bringing sites to life</p>
+                    <!-- <p class="text__motto">Bringing sites to life</p> -->
                     <p class="text__name">Stanislav Alyoshin</p>
+                    <p class="text__profession">
+                        <span class="text__to-be">To-be</span> Junior Web
+                        Developer
+                    </p>
                 </div>
                 <div class="profile__photo photo">
                     <p class="photo__placeholder">Placeholder</p>
