Started working on "doings" section

--- a/index.html
+++ b/index.html
@@ -93,8 +93,40 @@
             </section>
             <!-- === Doings === -->
             <section class="doings">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                Placeat, debitis.
+                <article class="technologies">
+                    <div class="title">I work with</div>
+                    <div class="technologies__items">
+                        <div class="technology">
+                            <div class="technology__logo"></div>
+                            <div class="technology__title">HTML 5</div>
+                        </div>
+                        <div class="technology">
+                            <div class="technology__logo"></div>
+                            <div class="technology__title">CSS 3</div>
+                        </div>
+                        <div class="technology">
+                            <div class="technology__logo"></div>
+                            <div class="technology__title">SCSS</div>
+                        </div>
+                        <div class="technology">
+                            <div class="technology__logo"></div>
+                            <div class="technology__title">JavaScript ES6</div>
+                        </div>
+                    </div>
+                </article>
+                <article class="technologies">
+                    <div class="title">Currently studying</div>
+                    <div class="technologies__items">
+                        <div class="technology">
+                            <div class="technology__logo"></div>
+                            <div class="technology__title">ReactJS</div>
+                        </div>
+                        <div class="technology">
+                            <div class="technology__logo"></div>
+                            <div class="technology__title">NodeJS</div>
+                        </div>
+                    </div>
+                </article>
                 <div class="doings__divider-bottom divider-bottom">
                     <svg
                         data-name="Layer 1"
