Worked a lil' on "Languages I speak" article

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                     <!-- <p class="text__motto">Bringing sites to life</p> -->
                     <p class="text__name">Stanislav Alyoshin</p>
                     <p class="text__profession">
-                        <span class="text__to-be">To-be</span> Junior Web
+                        <span class="text__to-be">to-be</span> Junior Web
                         Developer
                     </p>
                 </div>
@@ -94,15 +94,38 @@
             <!-- === Doings === -->
             <section class="doings">
                 <article class="technologies">
-                    <div class="title">I work with</div>
+                    <div class="title">Languages I speak</div>
                     <div class="technologies__items">
                         <div class="technology">
-                            <div class="technology__logo"></div>
+                            <div class="technology__logo">
+                                <img src="img/html.png" alt="html" />
+                            </div>
                             <div class="technology__title">HTML 5</div>
                         </div>
                         <div class="technology">
-                            <div class="technology__logo"></div>
+                            <div class="technology__logo">
+                                <img src="img/css.png" alt="css" />
+                            </div>
                             <div class="technology__title">CSS 3</div>
+                        </div>
+                        <div class="technology">
+                            <div class="technology__logo">
+                                <img src="img/js.png" alt="JavaScript" />
+                            </div>
+                            <div class="technology__title">JavaScript ES6</div>
+                        </div>
+                    </div>
+                </article>
+                <article class="technologies">
+                    <div class="title">DevTools I Use</div>
+                    <div class="technologies__items">
+                        <div class="technology">
+                            <div class="technology__logo"></div>
+                            <div class="technology__title">VS Code</div>
+                        </div>
+                        <div class="technology">
+                            <div class="technology__logo"></div>
+                            <div class="technology__title">BootStrap</div>
                         </div>
                         <div class="technology">
                             <div class="technology__logo"></div>
@@ -110,7 +133,19 @@
                         </div>
                         <div class="technology">
                             <div class="technology__logo"></div>
-                            <div class="technology__title">JavaScript ES6</div>
+                            <div class="technology__title">Photopea</div>
+                        </div>
+                        <div class="technology">
+                            <div class="technology__logo"></div>
+                            <div class="technology__title">Git</div>
+                        </div>
+                        <div class="technology">
+                            <div class="technology__logo"></div>
+                            <div class="technology__title">GitHub</div>
+                        </div>
+                        <div class="technology">
+                            <div class="technology__logo"></div>
+                            <div class="technology__title">CLI</div>
                         </div>
                     </div>
                 </article>
@@ -124,6 +159,10 @@
                         <div class="technology">
                             <div class="technology__logo"></div>
                             <div class="technology__title">NodeJS</div>
+                        </div>
+                        <div class="technology">
+                            <div class="technology__logo"></div>
+                            <div class="technology__title">MongoDB</div>
                         </div>
                     </div>
                 </article>
