Stylized "doings" fonts

--- a/index.html
+++ b/index.html
@@ -94,25 +94,25 @@
             <!-- === Doings === -->
             <section class="doings">
                 <article class="technologies">
-                    <div class="title">Languages I speak</div>
+                    <div class="title">Languages I Speak</div>
                     <div class="technologies__items">
                         <div class="technology">
                             <div class="technology__logo">
                                 <img src="img/html.png" alt="html" />
                             </div>
-                            <div class="technology__title">HTML 5</div>
+                            <div class="technology__title">HTML5</div>
                         </div>
                         <div class="technology">
                             <div class="technology__logo">
                                 <img src="img/css.png" alt="css" />
                             </div>
-                            <div class="technology__title">CSS 3</div>
+                            <div class="technology__title">CSS3</div>
                         </div>
                         <div class="technology">
                             <div class="technology__logo">
                                 <img src="img/js.png" alt="JavaScript" />
                             </div>
-                            <div class="technology__title">JavaScript ES6</div>
+                            <div class="technology__title">JS ES6</div>
                         </div>
                     </div>
                 </article>
@@ -150,7 +150,7 @@
                     </div>
                 </article>
                 <article class="technologies">
-                    <div class="title">Currently studying</div>
+                    <div class="title">Currently Studying</div>
                     <div class="technologies__items">
                         <div class="technology">
                             <div class="technology__logo"></div>
