Finished "doings" part

--- a/index.html
+++ b/index.html
@@ -120,48 +120,64 @@
                     <div class="title">DevTools I Use</div>
                     <div class="technologies__items">
                         <div class="technology">
-                            <div class="technology__logo"></div>
-                            <div class="technology__title">VS Code</div>
+                            <div class="technology__logo">
+                                <img src="img/vscode.png" alt="vscode" />
+                            </div>
+                            <div class="technology__title">VSCode</div>
                         </div>
                         <div class="technology">
-                            <div class="technology__logo"></div>
+                            <div class="technology__logo">
+                                <img src="img/bootstrap.png" alt="bootstrap" />
+                            </div>
                             <div class="technology__title">BootStrap</div>
                         </div>
                         <div class="technology">
-                            <div class="technology__logo"></div>
+                            <div class="technology__logo">
+                                <img src="img/scss.png" alt="scss" />
+                            </div>
                             <div class="technology__title">SCSS</div>
                         </div>
                         <div class="technology">
-                            <div class="technology__logo"></div>
-                            <div class="technology__title">Photopea</div>
-                        </div>
-                        <div class="technology">
-                            <div class="technology__logo"></div>
+                            <div class="technology__logo">
+                                <img src="img/git.png" alt="git" />
+                            </div>
                             <div class="technology__title">Git</div>
                         </div>
                         <div class="technology">
-                            <div class="technology__logo"></div>
+                            <div class="technology__logo">
+                                <img src="img/github.png" alt="github" />
+                            </div>
                             <div class="technology__title">GitHub</div>
                         </div>
                         <div class="technology">
-                            <div class="technology__logo"></div>
-                            <div class="technology__title">CLI</div>
+                            <div class="technology__logo">
+                                <img src="img/photopea.png" alt="photopea" />
+                            </div>
+                            <div class="technology__title">Photopea</div>
+                        </div>
+                        <div class="technology">
+                            <div class="technology__logo">
+                                <img src="img/cmd.png" alt="cmd" />
+                            </div>
+                            <div class="technology__title">CMD</div>
                         </div>
                     </div>
                 </article>
                 <article class="technologies">
                     <div class="title">Currently Studying</div>
-                    <div class="technologies__items">
+                    <div class="technologies__items technologies__items_bottom"">
                         <div class="technology">
-                            <div class="technology__logo"></div>
+                            <div class="technology__logo fixed-height">
+                                <img src="img/react.png" alt="reactjs" />
+                            </div>
                             <div class="technology__title">ReactJS</div>
                         </div>
                         <div class="technology">
-                            <div class="technology__logo"></div>
+                            <div class="technology__logo fixed-height"><img src="img/node.png" alt="nodejs"></div>
                             <div class="technology__title">NodeJS</div>
                         </div>
                         <div class="technology">
-                            <div class="technology__logo"></div>
+                            <div class="technology__logo fixed-height"><img src="img/mongodb.png" alt="mongodb"></div>
                             <div class="technology__title">MongoDB</div>
                         </div>
                     </div>
