--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                 <div class="profile__text text">
                     <p class="text__hello">Hello, I am</p>
                     <!-- <p class="text__motto">Bringing sites to life</p> -->
-                    <p class="text__name">Stanislav Alyoshin</p>
+                    <h1 class="text__name">Stanislav Alyoshin</h1>
                     <p class="text__profession">
                         <span class="text__to-be">to-be</span> Junior Web
                         Developer
@@ -94,91 +94,91 @@
             <!-- === Doings === -->
             <section class="doings">
                 <article class="technologies">
-                    <div class="title">Languages I Speak</div>
+                    <h1 class="title">Languages I Speak</h1>
                     <div class="technologies__items">
                         <div class="technology">
                             <div class="technology__logo">
                                 <img src="img/html.png" alt="html" />
                             </div>
-                            <div class="technology__title">HTML5</div>
+                            <p class="technology__title">HTML5</p>
                         </div>
                         <div class="technology">
                             <div class="technology__logo">
                                 <img src="img/css.png" alt="css" />
                             </div>
-                            <div class="technology__title">CSS3</div>
+                            <p class="technology__title">CSS3</p>
                         </div>
                         <div class="technology">
                             <div class="technology__logo">
                                 <img src="img/js.png" alt="JavaScript" />
                             </div>
-                            <div class="technology__title">JS ES6</div>
+                            <p class="technology__title">JS ES6</p>
                         </div>
                     </div>
                 </article>
                 <article class="technologies">
-                    <div class="title">DevTools I Use</div>
+                    <h1 class="title">DevTools I Use</h1>
                     <div class="technologies__items">
                         <div class="technology">
                             <div class="technology__logo">
                                 <img src="img/vscode.png" alt="vscode" />
                             </div>
-                            <div class="technology__title">VSCode</div>
+                            <p class="technology__title">VSCode</p>
                         </div>
                         <div class="technology">
                             <div class="technology__logo">
                                 <img src="img/bootstrap.png" alt="bootstrap" />
                             </div>
-                            <div class="technology__title">BootStrap</div>
+                            <p class="technology__title">BootStrap</p>
                         </div>
                         <div class="technology">
                             <div class="technology__logo">
                                 <img src="img/scss.png" alt="scss" />
                             </div>
-                            <div class="technology__title">SCSS</div>
+                            <p class="technology__title">SCSS</p>
                         </div>
                         <div class="technology">
                             <div class="technology__logo">
                                 <img src="img/git.png" alt="git" />
                             </div>
-                            <div class="technology__title">Git</div>
+                            <p class="technology__title">Git</p>
                         </div>
                         <div class="technology">
                             <div class="technology__logo">
                                 <img src="img/github.png" alt="github" />
                             </div>
-                            <div class="technology__title">GitHub</div>
+                            <p class="technology__title">GitHub</p>
                         </div>
                         <div class="technology">
                             <div class="technology__logo">
                                 <img src="img/photopea.png" alt="photopea" />
                             </div>
-                            <div class="technology__title">Photopea</div>
+                            <p class="technology__title">Photopea</p>
                         </div>
                         <div class="technology">
                             <div class="technology__logo">
                                 <img src="img/cmd.png" alt="cmd" />
                             </div>
-                            <div class="technology__title">CMD</div>
+                            <p class="technology__title">CMD</p>
                         </div>
                     </div>
                 </article>
                 <article class="technologies">
-                    <div class="title">Currently Studying</div>
+                    <h1 class="title">Currently Studying</h1>
                     <div class="technologies__items technologies__items_bottom"">
                         <div class="technology">
                             <div class="technology__logo fixed-height">
                                 <img src="img/react.png" alt="reactjs" />
                             </div>
-                            <div class="technology__title">ReactJS</div>
+                            <p class="technology__title">ReactJS</p>
                         </div>
                         <div class="technology">
                             <div class="technology__logo fixed-height"><img src="img/node.png" alt="nodejs"></div>
-                            <div class="technology__title">NodeJS</div>
+                            <p class="technology__title">NodeJS</p>
                         </div>
                         <div class="technology">
                             <div class="technology__logo fixed-height"><img src="img/mongodb.png" alt="mongodb"></div>
-                            <div class="technology__title">MongoDB</div>
+                            <p class="technology__title">MongoDB</p>
                         </div>
                     </div>
                 </article>
@@ -198,8 +198,8 @@
             </section>
             <!-- === Whoings === -->
             <section class="whoings">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                Placeat, debitis.
+                <h1 class="title">About My Experience</h1>
+
                 <div class="whoings__divider-bottom divider-bottom">
                     <svg
                         data-name="Layer 1"
