Done the "whoings" section

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                         ></path>
                     </svg>
                 </div>
-                <div class="profile__text text">
+                <div class="text">
                     <p class="text__hello">Hello, I am</p>
                     <!-- <p class="text__motto">Bringing sites to life</p> -->
                     <h1 class="text__name">Stanislav Alyoshin</h1>
@@ -199,7 +199,75 @@
             <!-- === Whoings === -->
             <section class="whoings">
                 <h1 class="title">About My Experience</h1>
-
+                <p class="text">Since beginning my journey as a frontend developer in Spring 2021, I've studied hard, consumed every bit & byte of necessary knowledge as fast and thoughtul as I could, poured my soul and countless hours into making lovely sites. I'm doing everything I can to become compenent frontend dev ASAP. I'm sure to become valuable member of your team!</p>
+                <h1 class="title">I Gain Knowledge From</h1>
+                <div class="technologies">
+                    <h2 class="title">Udemy Courses</h2>
+                    <div class="technologies__items flex-nowrap">
+                        <div class="technology">
+                            <div class="technology__logo">
+                                <img src="img/result.jpg" alt="Course logo" class="rounded-a-little" />
+                            </div>
+                            <a href="https://www.udemy.com/course/result-oriented-web-developer-course/" class="technology__title"><p>The Result-Oriented</p><p>Web Developer Course</p></a>
+                            <label for="udemy-progress-bar">Study Progress:</label>
+                            <progress id="udemy-progress-bar" max="100" value="85">85%</progress>
+                        </div>
+                        <div class="technology">
+                            <div class="technology__logo">
+                                <img src="img/react.jpg" alt="Course logo" class="rounded-a-little"/>
+                            </div>
+                            <a href="https://www.udemy.com/course/react-the-complete-guide-incl-redux/" class="technology__title"><p>React</p><p>The Complete Guide</p></a>
+                            <label for="udemy-progress-bar">Study Progress:</label>
+                            <progress id="udemy-progress-bar" max="100" value="10">10%</progress>
+                        </div>
+                        <div class="technology">
+                            <div class="technology__logo">
+                                <img src="img/node.jpg" alt="Course logo" class="rounded-a-little" />
+                            </div>
+                            <a href="https://www.udemy.com/course/nodejs-express-mongodb-bootcamp/" class="technology__title"><p>Node.js</p><p>Express, MongoDB & More</p></a>
+                            <label for="udemy-progress-bar">Study Progress:</label>
+                            <progress id="udemy-progress-bar" max="100" value="1">1%</progress>
+                        </div>
+                    </div>
+                    <div class="technologies">
+                        <h2 class="title">Youtube Channels</h2>
+                        <div class="technologies__items  flex-nowrap">
+                            <div class="technology">
+                                <div class="technology__logo">
+                                    <img src="img/wds.jpg" alt="Course logo" class="rounded" />
+                                </div>
+                                <a href="https://www.youtube.com/c/WebDevSimplified" class="technology__title"><p>Web Dev Simplified</p></a>
+                            </div>
+                            <div class="technology">
+                                <div class="technology__logo">
+                                    <img src="img/fireship.jpg" alt="Course logo" class="rounded" />
+                                </div>
+                                <a href="https://www.youtube.com/c/Fireship" class="technology__title"><p>Fireship</p></a>
+                            </div>
+                            <div class="technology">
+                                <div class="technology__logo">
+                                    <img src="img/science.jpg" alt="Course logo" class="rounded" />
+                                </div>
+                                <a href="https://www.youtube.com/channel/UCmI5YBB9KJ0xLtFtgBX8rfw" class="technology__title"><p>Front-end Science</p>
+                                    <p>c Сергеем Пузанковым</p></a>
+                            </div>
+                            <div class="technology">
+                                <div class="technology__logo">
+                                    <img src="img/webdev.jpg" alt="Course logo" class="rounded" />
+                                </div>
+                                <a href="https://www.youtube.com/channel/UCP-xJwnvKCGyS-nbyOx1Wmg" class="technology__title"><p>WebDev с нуля</p>
+                                    <p>Канал Алекса Лущенко</p></a>
+                            </div>
+                            <div class="technology">
+                                <div class="technology__logo">
+                                    <img src="img/freelance.jpg" alt="Course logo" class="rounded" />
+                                </div>
+                                <a href="https://www.youtube.com/channel/UCP-xJwnvKCGyS-nbyOx1Wmg" class="technology__title"><p>WebDev с нуля</p>
+                                    <p>Канал Алекса Лущенко</p></a>
+                            </div>
+                        </div>
+                        <h1 class="title" style="margin-bottom: 30rem;" >And More...</h1>
+                </div>
                 <div class="whoings__divider-bottom divider-bottom">
                     <svg
                         data-name="Layer 1"
