Added a word | Deleted a word

--- a/index.html
+++ b/index.html
@@ -266,7 +266,7 @@
                                     <p>Канал Алекса Лущенко</p></a>
                             </div>
                         </div>
-                        <h1 class="title" style="margin-bottom: 30rem;" >And More...</h1>
+                        <h1 class="title" style="margin-bottom: 30rem;" >And Many More...</h1>
                 </div>
                 <div class="whoings__divider-bottom divider-bottom">
                     <svg
