Corrected and added things in the "whoings" section

--- a/index.html
+++ b/index.html
@@ -180,6 +180,10 @@
                             <div class="technology__logo fixed-height"><img src="img/mongodb.png" alt="mongodb"></div>
                             <p class="technology__title">MongoDB</p>
                         </div>
+                        <div class="technology">
+                            <div class="technology__logo fixed-height"><img src="img/ts.png" alt="typesctipt"></div>
+                            <p class="technology__title">TypeScript</p>
+                        </div>
                     </div>
                 </article>
                 <div class="doings__divider-bottom divider-bottom">
@@ -206,7 +210,9 @@
                     <div class="technologies__items flex-nowrap">
                         <div class="technology">
                             <div class="technology__logo">
-                                <img src="img/result.jpg" alt="Course logo" class="rounded-a-little" />
+                                <a href="https://www.udemy.com/course/result-oriented-web-developer-course/">
+                                    <img src="img/result.jpg" alt="Course logo" class="rounded-a-little" />
+                                </a>
                             </div>
                             <a href="https://www.udemy.com/course/result-oriented-web-developer-course/" class="technology__title"><p>The Result-Oriented</p><p>Web Developer Course</p></a>
                             <label for="udemy-progress-bar">Study Progress:</label>
@@ -214,7 +220,9 @@
                         </div>
                         <div class="technology">
                             <div class="technology__logo">
-                                <img src="img/react.jpg" alt="Course logo" class="rounded-a-little"/>
+                                <a href="https://www.udemy.com/course/react-the-complete-guide-incl-redux/">
+                                    <img src="img/react.jpg" alt="Course logo" class="rounded-a-little"/>
+                                </a>
                             </div>
                             <a href="https://www.udemy.com/course/react-the-complete-guide-incl-redux/" class="technology__title"><p>React</p><p>The Complete Guide</p></a>
                             <label for="udemy-progress-bar">Study Progress:</label>
@@ -222,7 +230,9 @@
                         </div>
                         <div class="technology">
                             <div class="technology__logo">
-                                <img src="img/node.jpg" alt="Course logo" class="rounded-a-little" />
+                                <a href="https://www.udemy.com/course/nodejs-express-mongodb-bootcamp/">
+                                    <img src="img/node.jpg" alt="Course logo" class="rounded-a-little" />
+                                </a>
                             </div>
                             <a href="https://www.udemy.com/course/nodejs-express-mongodb-bootcamp/" class="technology__title"><p>Node.js</p><p>Express, MongoDB & More</p></a>
                             <label for="udemy-progress-bar">Study Progress:</label>
@@ -231,39 +241,62 @@
                     </div>
                     <div class="technologies">
                         <h2 class="title">Youtube Channels</h2>
-                        <div class="technologies__items  flex-nowrap">
+                        <div class="technologies__items">
                             <div class="technology">
                                 <div class="technology__logo">
-                                    <img src="img/wds.jpg" alt="Course logo" class="rounded" />
+                                    <a href="https://www.youtube.com/c/FreeCodeCamp"><img src="img/freecodecamp.jpg" alt="Course logo" class="rounded" /></a>
+                                </div>
+                                <a href="https://www.youtube.com/c/Freecodecamp" class="technology__title"><p>Freecodecamp</p></a>
+                            </div>
+                            <div class="technology">
+                                <div class="technology__logo">
+                                    <a href="https://www.youtube.com/c/WebDevSimplified"><img src="img/wds.jpg" alt="Course logo" class="rounded" /></a>
                                 </div>
                                 <a href="https://www.youtube.com/c/WebDevSimplified" class="technology__title"><p>Web Dev Simplified</p></a>
                             </div>
                             <div class="technology">
                                 <div class="technology__logo">
-                                    <img src="img/fireship.jpg" alt="Course logo" class="rounded" />
+                                    <a href="https://www.youtube.com/c/Fireship">
+                                        <img src="img/fireship.jpg" alt="Course logo" class="rounded" />
+                                    </a> 
                                 </div>
                                 <a href="https://www.youtube.com/c/Fireship" class="technology__title"><p>Fireship</p></a>
                             </div>
                             <div class="technology">
                                 <div class="technology__logo">
-                                    <img src="img/science.jpg" alt="Course logo" class="rounded" />
+                                    <a href="https://www.youtube.com/user/learncodeacademy">
+                                        <img src="img/learncode.jpg" alt="Course logo" class="rounded" />
+                                    </a> 
+                                </div>
+                                <a href="https://www.youtube.com/user/learncodeacademy" class="technology__title"><p>LearnCode</p>
+                                <p>Academy</p></a>
+                            </div>
+                            <div class="technology">
+                                <div class="technology__logo">
+                                    <a href="https://www.youtube.com/channel/UCmI5YBB9KJ0xLtFtgBX8rfw">
+                                        <img src="img/science.jpg" alt="Course logo" class="rounded" />
+                                    </a>
                                 </div>
                                 <a href="https://www.youtube.com/channel/UCmI5YBB9KJ0xLtFtgBX8rfw" class="technology__title"><p>Front-end Science</p>
                                     <p>c Сергеем Пузанковым</p></a>
                             </div>
                             <div class="technology">
                                 <div class="technology__logo">
-                                    <img src="img/webdev.jpg" alt="Course logo" class="rounded" />
+                                    <a href="https://www.youtube.com/channel/UCP-xJwnvKCGyS-nbyOx1Wmg">
+                                        <img src="img/webdev.jpg" alt="Course logo" class="rounded" />
+                                    </a>
                                 </div>
                                 <a href="https://www.youtube.com/channel/UCP-xJwnvKCGyS-nbyOx1Wmg" class="technology__title"><p>WebDev с нуля</p>
                                     <p>Канал Алекса Лущенко</p></a>
                             </div>
                             <div class="technology">
                                 <div class="technology__logo">
-                                    <img src="img/freelance.jpg" alt="Course logo" class="rounded" />
+                                    <a href="https://www.youtube.com/results?search_query=фрилансер+по+жизни">
+                                        <img src="img/freelance.jpg" alt="Course logo" class="rounded" />
+                                    </a>
                                 </div>
-                                <a href="https://www.youtube.com/channel/UCP-xJwnvKCGyS-nbyOx1Wmg" class="technology__title"><p>WebDev с нуля</p>
-                                    <p>Канал Алекса Лущенко</p></a>
+                                <a href="https://www.youtube.com/results?search_query=фрилансер+по+жизни" class="technology__title"><p>Фрилансер</p>
+                                    <p>По жизни</p></a>
                             </div>
                         </div>
                         <h1 class="title" style="margin-bottom: 30rem;" >And Many More...</h1>
