Made projects template

--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
                 <h1 class="title">About My Experience</h1>
                 <p class="text">Since beginning my journey as a frontend developer in Spring 2021, I've studied hard, consumed every bit & byte of necessary knowledge as fast and thoughtul as I could, poured my soul and countless hours into making lovely sites. I'm doing everything I can to become compenent frontend dev ASAP. I'm sure to become valuable member of your team!</p>
                 <h1 class="title">I Gain Knowledge From</h1>
-                <div class="technologies">
+                <article class="technologies">
                     <h2 class="title">Udemy Courses</h2>
                     <div class="technologies__items flex-nowrap">
                         <div class="technology">
@@ -239,7 +239,8 @@
                             <progress id="udemy-progress-bar" max="100" value="1">1%</progress>
                         </div>
                     </div>
-                    <div class="technologies">
+                </article>
+                    <article class="technologies">
                         <h2 class="title">Youtube Channels</h2>
                         <div class="technologies__items">
                             <div class="technology">
@@ -300,7 +301,7 @@
                             </div>
                         </div>
                         <h1 class="title" style="margin-bottom: 30rem;" >And Many More...</h1>
-                </div>
+                </article>
                 <div class="whoings__divider-bottom divider-bottom">
                     <svg
                         data-name="Layer 1"
@@ -327,8 +328,30 @@
             </section>
             <!-- === Works === -->
             <section class="works">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                Placeat, debitis.
+                <article class="projects">
+                    <h1 class="title">My Projects</h1>
+                    <div class="projects__items flex-nowrap">
+                        <div class="project">
+                            <div class="project__left-side">
+                                <div class="project__logo">
+                                    <a href="https://leshista.github.io/Portfolio/">
+                                        <img src="img/result.jpg" alt="Project" class="rounded-a-little" />
+                                    </a>
+                                </div>
+                                <a href="https://leshista.github.io/Portfolio/" class="project__title"><p>Portfolio</p></a>
+                                <div class="project__github-logo">
+                                    <a href="https://github.com/Leshista/Portfolio"><img src="img/github.png" alt="Github Link"></a>
+                                </div>
+                            </div>
+                            <div class="project__right-side">
+                                <h2 class="title">Languages used:</h2>
+                                <p class="project__technologies">HTML5, CSS, JavaScript ES6</p>
+                                <h2 class="title">Technologies used:</h2>
+                                <p class="project__technologies">SCSS, VSCode, Git, GitHub, Photopea</p>
+                            </div>
+                        </div>
+                    </div>
+                </article>
                 <div class="works__divider-bottom divider-bottom">
                     <svg
                         data-name="Layer 1"
